Bug 31286 - [bisected drm-intel-next] kernel oops when start compiz
Summary: [bisected drm-intel-next] kernel oops when start compiz
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-01 02:06 UTC by wang,jinjin
Modified: 2017-10-06 14:53 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments
drop map/fence distinction (4.41 KB, patch)
2010-11-02 14:26 UTC, Daniel Vetter
no flags Details | Splinter Review

Description wang,jinjin 2010-11-01 02:06:41 UTC
Bug detailed description:
---------------------------------
With Kernel: (drm-intel-next)872d860c85e30cdc97e7c91723257f4fcf04d5e9, kernel will have oops when start compiz.I bisected it and found the first bad commit was :
commit a00b10c360b35d6431a94cbf130a4e162870d661
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Sep 24 21:15:47 2010 +0100

    drm/i915: Only enforce fence limits inside the GTT.


The error message was:
--------------------------------
------------[ cut here ]------------
kernel BUG at drivers/gpu/drm/i915/i915_gem.c:4162!
invalid opcode: 0000 [#1] SMP
last sysfs file: /sys/devices/pci0000:00/0000:00:1f.2/host0/target0:0:0/0:0:0:0/                                                                                                 model
Modules linked in: fuse sunrpc ipt_REJECT nf_conntrack_ipv4 nf_defrag_ipv4 iptab                                                                                                 le_filter ip_tables ip6t_REJECT xt_tcpudp nf_conntrack_ipv6 nf_defrag_ipv6 xt_st                                                                                                 ate nf_conntrack ip6table_filter ip6_tables x_tables ipv6 cpufreq_ondemand acpi_                                                                                                 cpufreq freq_table mperf dm_mirror dm_region_hash dm_log dm_multipath dm_mod uin                                                                                                 put snd_hda_codec_realtek snd_hda_intel snd_hda_codec snd_hwdep snd_seq snd_seq_                                                                                                 device snd_pcm snd_timer msi_laptop i2c_i801 rfkill snd soundcore snd_page_alloc                                                                                                  r8169 mii wmi pcspkr ac joydev battery sg pata_acpi sd_mod ext3 jbd mbcache uhc                                                                                                 i_hcd ohci_hcd ehci_hcd i915 drm_kms_helper drm i2c_algo_bit button i2c_core vid                                                                                                 eo output [last unloaded: microcode]

Pid: 1764, comm: X Not tainted 2.6.36_a00b10_20101101+ #1 MS-N014/MS-N014
EIP: 0060:[<f827630c>] EFLAGS: 00213202 CPU: 0
EIP is at i915_gem_object_pin+0x15b/0x169 [i915]
EAX: 00009c87 EBX: f580df00 ECX: 00000001 EDX: 00008000
ESI: f6482000 EDI: 00000000 EBP: f59e7dc4 ESP: f59e7db4
 DS: 007b ES: 007b FS: 00d8 GS: 0033 SS: 0068
Process X (pid: 1764, ti=f59e6000 task=f5642580 task.ti=f59e6000)
Stack:
 01014400 f580df00 00000000 f1e12900 f59e7e54 f82784ca 00000001 f6482000
<0> 00000040 f59e7de8 f82740b6 f1c3d900 f59e7e98 f6482018 f6482000 ec01ed40
<0> 00000000 f274a000 f6454400 00000000 00000003 f1fd0074 f1e12900 f5c85800
Call Trace:
 [<f82784ca>] ? i915_gem_do_execbuffer+0x3e9/0xc68 [i915]
 [<f82740b6>] ? i915_gem_object_unpin+0x70/0xab [i915]
 [<f8278e3b>] ? i915_gem_execbuffer2+0xf2/0x175 [i915]
 [<f8133200>] ? drm_ioctl+0x268/0x322 [drm]
 [<f8278d49>] ? i915_gem_execbuffer2+0x0/0x175 [i915]
 [<c02baa57>] ? do_sync_read+0x8a/0xc5
 [<c02abb79>] ? page_add_new_anon_rmap+0x4d/0x5d
 [<f8132f98>] ? drm_ioctl+0x0/0x322 [drm]
 [<c02c61ca>] ? do_vfs_ioctl+0x4fa/0x53f
 [<c035f71d>] ? security_file_permission+0x59/0x64
 [<c02bab5e>] ? rw_verify_area+0xcc/0xe8
 [<c02bb51f>] ? vfs_read+0x98/0x126
 [<c02c6250>] ? sys_ioctl+0x41/0x61
 [<c020280c>] ? sysenter_do_call+0x12/0x22
 [<c0500000>] ? native_cpu_up+0x3d9/0x56e
Code: 8b 53 60 8d 8e 54 11 00 00 8b 43 64 89 42 04 89 10 8b 96 58 11 00 00 8d 43                                                                                                  60 e8 db c3 10 c8 f6 43 7a 08 75 0a 80 7d f3 00 74 04 <0f> 0b eb fe 31 c0 8d 65                                                                                                  f4 5b 5e 5f 5d c3 55 89 e5 57 56 89 c6
EIP: [<f827630c>] i915_gem_object_pin+0x15b/0x169 [i915] SS:ESP 0068:f59e7db4
Comment 1 Chris Wilson 2010-11-01 02:19:45 UTC
Platform? Looks like one of the self-checks for the mappable+fencing failed.
Comment 2 wang,jinjin 2010-11-01 02:21:58 UTC
I tested it on Pineview 32bit
Comment 3 Daniel Vetter 2010-11-02 14:26:02 UTC
Created attachment 39995 [details] [review]
drop map/fence distinction

Does this patch help?
Comment 4 Oleksij Rempel 2010-11-02 23:53:39 UTC
Applied on top of 8c1812ad4 (Merge branch 'drm-intel-fixes' into drm-intel-next)

and work for me. (Asus eeepc 1005he, graphics 945gm)
Comment 5 wang,jinjin 2010-11-02 23:59:46 UTC
I patched it to Kernel: (drm-intel-next)27153f72d04bcd83b3a66e219418a21d6269553b and tested it worked for me.So, the issue will not happen now.
Comment 6 wang,jinjin 2010-11-03 01:01:56 UTC
I am sorry. I tested the newest commit

commit 27153f72d04bcd83b3a66e219418a21d6269553b
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Nov 2 11:17:23 2010 +0000

It had not been patched, so the issue still had.
So, I wil reopen it firstly and verify the commit patched later.
Comment 7 Chris Wilson 2010-11-03 02:33:43 UTC
commit 085ce2643713830cf772c12c1a16da9d0ba83f36
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Nov 3 09:27:53 2010 +0000

    drm/i915: Ensure that if we ever try to pin+fence it is mappable.
    
    When merging Daniel's full-gtt patches I had a set of tweaks which I
    thought I had undone. I was half right...
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=31286
    Reported-by: jinjin.wang@intel.com
    Reported-by: Alexey Fisher <bug-track@fisher-privat.net>
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 8 wang,jinjin 2010-11-03 22:07:14 UTC
With the 085ce2643713830cf772c12c1a16da9d0ba83f36
, the issue will be fixed.
Comment 9 Elizabeth 2017-10-06 14:53:21 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.